@@ -1,12 +1,11 @@
-WildFly Quickstarts
-====================
-Summary: The quickstarts demonstrate Java EE 7 and a few additional technologies from the JBoss stack. They provide small, specific, working examples that can be used as a reference for your own project.  
+# ${product.name.full} (${product.name}) Quickstarts
 
-Introduction
-------------
+Summary: The quickstarts demonstrate Java EE 7 and a few additional technologies from the JBoss stack. They provide small, specific, working examples that can be used as a reference for your own project.
 
 
-These quickstarts run on JBoss WildFly. This version uses the correct dependencies and ensures you test and compile against your runtime environment.
+## Introduction
+
+These quickstarts run on ${product.name.full} ${product.version} or later. We recommend using the ${product.name} ZIP file. This version uses the correct dependencies and ensures you test and compile against your runtime environment.
 
 Be sure to read this entire document before you attempt to work with the quickstarts. It contains the following information:
 
@@ -16,7 +15,7 @@ Be sure to read this entire document before you attempt to work with the quickst
 
 * [System Requirements](#system-requirements): List of software required to run the quickstarts.
 
-* [Configure Maven](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_MAVEN.md): How to configure the Maven repository for use by the quickstarts.
+* [Configure Maven](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_MAVEN_JBOSS_EAP7.md#configure-maven-to-build-and-deploy-the-quickstarts): How to configure the Maven repository for use by the quickstarts.
 
 * [Run the Quickstarts](#run-the-quickstarts): General instructions for building, deploying, and running the quickstarts.
 
@@ -26,25 +25,22 @@ Be sure to read this entire document before you attempt to work with the quickst
 
 * [Contributing Guide](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONTRIBUTING.md#jboss-developer-contributing-guide): This document contains information targeted for developers who want to contribute to JBoss developer projects.
 
-Use of WILDFLY_HOME and JBOSS_HOME Variables
----------------------------------
+## Use of ${jboss.home.name} and JBOSS_HOME Variables
 
-The quickstart README files use the *replaceable* value `WILDFLY_HOME` to denote the path to the WildFly installation. When you encounter this value in a README file, be sure to replace it with the actual path to your WildFly installation. The installation path is described in detail here: [Use of WILDFLY_HOME and JBOSS_HOME Variables](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/USE_OF_EAP7_HOME.md#use-of-eap_home-and-jboss_home-variables).
+The quickstart README files use the *replaceable* value `${jboss.home.name}` to denote the path to the ${product.name} installation. When you encounter this value in a README file, be sure to replace it with the actual path to your ${product.name} installation. The installation path is described in detail here: [Use of ${jboss.home.name} and JBOSS_HOME Variables](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/USE_OF_${jboss.home.name}.md#use-of-eap_home-and-jboss_home-variables).
 
 
-Available Quickstarts
----------------------
+## Available Quickstarts
 
 All available quickstarts can be found here: <http://www.jboss.org/developer-materials/#!formats=jbossdeveloper_quickstart>. You can filter by the quickstart name, the product, and the technologies demonstrated by the quickstart. You can also limit the results based on skill level and date published. The resulting page provides a brief description of each matching quickstart, the skill level, and the technologies used. Click on the quickstart to see more detailed information about how to run it. Some quickstarts require deployment of other quickstarts. This information is noted in the `Prerequisites` section of the quickstart README file.
 
-_Note_: Some of these quickstarts use the H2 database included with WildFly. It is a lightweight, relational example datasource that is used for examples only. It is not robust or scalable, is not supported, and should NOT be used in a production environment!
+_Note_: Some of these quickstarts use the H2 database included with ${product.name}. It is a lightweight, relational example datasource that is used for examples only. It is not robust or scalable, is not supported, and should NOT be used in a production environment!
 
 
 [TOC-quickstart]
 
 
-Suggested Approach to the Quickstarts
--------------------------------------
+## Suggested Approach to the Quickstarts
 
 We suggest you approach the quickstarts as follows:
 
@@ -53,30 +49,28 @@ We suggest you approach the quickstarts as follows:
 * Some quickstarts are based upon other quickstarts but have expanded capabilities and functionality. If a prerequisite quickstart is listed, be sure to deploy and test it before looking at the expanded version.
 
 
-System Requirements
--------------------
+## System Requirements
 
-The applications these projects produce are designed to be run on Red Hat JBoss Enterprise Application Platform 7 or later. 
+The applications these projects produce are designed to be run on ${product.name.full} ${product.version} or later.
 
-All you need to build these projects is Java 8.0 (Java SDK 1.8) or later and Maven 3.1.1 or later. See [Configure Maven for WildFly 10](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_MAVEN_JBOSS_EAP7.md#configure-maven-to-build-and-deploy-the-quickstarts) to make sure you are configured correctly for testing the quickstarts.
+All you need to build these projects is ${build.requirements}. See [Configure Maven for ${product.name} ${product.version}](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_MAVEN_JBOSS_EAP7.md#configure-maven-to-build-and-deploy-the-quickstarts) to make sure you are configured correctly for testing the quickstarts.
 
-To run these quickstarts with the provided build scripts, you need the the WildFly distribution ZIP. For information on how to install and run JBoss, see the [Red Hat JBoss Enterprise Application Platform Documentation](https://access.redhat.com/documentation/en-US/JBoss_Enterprise_Application_Platform/) _Getting Started Guide_ located on the Customer Portal.
+To run these quickstarts with the provided build scripts, you need the ${product.name} distribution ZIP. For information on how to install and run JBoss, see the [${product.name.full} Documentation](https://access.redhat.com/documentation/en/red-hat-jboss-enterprise-application-platform/) _Getting Started Guide_ located on the Customer Portal.
 
-You can also use [JBoss Developer Studio or Eclipse](#use-jboss-developer-studio-or-eclipse-to-run-the-quickstarts) to run the quickstarts. 
+You can also use [JBoss Developer Studio or Eclipse](#use-jboss-developer-studio-or-eclipse-to-run-the-quickstarts) to run the quickstarts.
 
 
-Run the Quickstarts
--------------------
+## Run the Quickstarts
 
 The root folder of each individual quickstart contains a README file with specific details on how to build and run the example. In most cases you do the following:
 
-* [Start the WildFly Server](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/START_JBOSS_EAP.md#start-the-jboss-eap-server)
+* [Start the ${product.name} Server](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/START_JBOSS_EAP.md#start-the-jboss-eap-server)
 * [Build and deploy the quickstarts](#build-and-deploy-the-quickstarts)
 
-           
+
 ### Build and Deploy the Quickstarts
 
-See the README file in each individual quickstart folder for specific details and information on how to run and access the example. 
+See the README file in each individual quickstart folder for specific details and information on how to run and access the example.
 
 
 #### Build the Quickstart Archive
@@ -92,46 +86,39 @@ In most cases, you can use the following steps to build the application to test 
 
 In most cases, you can use the following steps to build and deploy the application. See the specific quickstart README file for complete details.
 
-1. Make sure you start the WildFly server as described in the quickstart README file.
+1. Make sure you start the ${product.name} server as described in the quickstart README file.
 2. Open a command prompt and navigate to the root directory of the quickstart you want to run.
 3. Use this command to build and deploy the archive:
 
             mvn clean install wildfly:deploy
- 
+
 #### Undeploy an Archive
 
-The command to undeploy the quickstart is simply: 
+The command to undeploy the quickstart is simply:
 
         mvn wildfly:undeploy
 
 
 ### Verify the Quickstarts Build with One Command
--------------------------------------------------
 
-You can verify the quickstarts build using one command. However, quickstarts that have complex dependencies must be skipped. For example, the `resteasy-jaxrs-client` quickstart is a RESTEasy client that depends on the deployment of the _helloworld-rs_ quickstart. As noted above, the root `pom.xml` file defines a `complex-dependencies` profile to exclude these quickstarts from the root build process. 
+You can verify the quickstarts build using one command. However, quickstarts that have complex dependencies must be skipped. For example, the `resteasy-jaxrs-client` quickstart is a RESTEasy client that depends on the deployment of the `helloworld-rs` quickstart. As noted above, the root `pom.xml` file defines a `complex-dependencies` profile to exclude these quickstarts from the root build process.
 
 To build the quickstarts:
 
-1. Do not start the WildFly server.
+1. Do not start the ${product.name} server.
 2. Open a command prompt and navigate to the root directory of the quickstarts.
 3. Use this command to build the quickstarts that do not have complex dependencies:
 
             mvn clean install '-Pdefault,!complex-dependencies'
 
-_Note_: If you see a `java.lang.OutOfMemoryError: PermGen space` error when you run this command, increase the memory by typing the following command for your operating system, then try the above command again.
-
-        For Linux:   export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
-        For Windows: SET MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
-
 
 ### Undeploy the Deployed Quickstarts with One Command
-------------------------------------------------------
 
 To undeploy the quickstarts from the root of the quickstart folder, you must pass the argument `-fae` (fail at end) on the command line. This allows the command to continue past quickstarts that fail due to complex dependencies and quickstarts that only have Arquillian tests and do not deploy archives to the server.
 
 You can undeploy quickstarts using the following procedure:
 
-1. Start the WildFly server.
+1. Start the ${product.name} server.
 2. Open a command prompt and navigate to the root directory of the quickstarts.
 3. Use this command to undeploy any deployed quickstarts:
 
@@ -140,14 +127,13 @@ You can undeploy quickstarts using the following procedure:
 To undeploy any quickstarts that fail due to complex dependencies, follow the undeploy procedure described in the quickstart's README file.
 
 
-Use JBoss Developer Studio or Eclipse to Run the Quickstarts
-------------------------------------------------------------
+## Run the Quickstarts in Red Hat JBoss Developer Studio or Eclipse
 
-You can also deploy the quickstarts from Eclipse using JBoss tools. For more information on how to set up Maven and the JBoss tools, see the [Red Hat JBoss Enterprise Application Platform Documentation](https://access.redhat.com/documentation/en-US/JBoss_Enterprise_Application_Platform/) _Getting Started Guide_ and _Development Guide_ or [Get Started with JBoss Developer Studio](http://www.jboss.org/products/devstudio/get-started/ "Get Started with JBoss Developer Studio").
+You can also start the server and deploy the quickstarts or run the Arquillian tests from Eclipse using JBoss tools. For general information about how to import a quickstart, add a ${product.name} server, and build and deploy a quickstart, see [Use JBoss Developer Studio or Eclipse to Run the Quickstarts](${use.eclipse.url}).
 
 
-Optional Components
--------------------
+## Optional Components
+
 The following components are needed for only a small subset of the quickstarts. Do not install or configure them unless the quickstart requires it.
 
 * [Create Users Required by the Quickstarts](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CREATE_USERS.md#create-users-required-by-the-quickstarts): Add a Management or Application user for the quickstarts that run in a secured mode.
@@ -155,6 +141,3 @@ The following components are needed for only a small subset of the quickstarts. 
 * [Configure the PostgreSQL Database for Use with the Quickstarts](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_POSTGRESQL_EAP7.md#configure-the-postgresql-database-for-use-with-the-quickstarts): The PostgreSQL database is used for the distributed transaction quickstarts.
 
 * [Configure Byteman for Use with the Quickstarts](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_BYTEMAN.md#configure-byteman-for-use-with-the-quickstarts): This tool is used to demonstrate crash recovery for distributed transaction quickstarts.
-
-
-
